# paper-centrality

./: .gitignore  .pdm-python  README.md  pyproject.toml
code/: lu_plots.py  ped_plots.py  plots.py  travel_survey_plots.py  util.py
deprecated/: ped_survey.py
maps/: madrid_data.qgz
notes/: package_algorithm_audit.md
paper/: highlights.txt  main.tex  references.bib
paper/epb_submission/: build.py  main.tex
paper/mdpi_submisssion/: SUBMISSION_CHECKLIST.md  build.py  main.tex  supplementary.tex
paper/sections/: 0_abstract.tex  1_networks.tex  2_concepts.tex  3_centralities.tex  4_methods.tex  5_data.tex  6_analysis.tex  7_conclusion.tex
paper/sections/supplementary/: S1_add_cents.tex
paper/supplementary/: S1_add_cents.tex  S2_add_figures.tex  removed_analysis_figures.tex  removed_data.tex
paper/tables/: bootstrap_ci_segments.csv  bootstrap_ci_segments.tex  descriptive_stats_centrality.tex  descriptive_stats_centrality_angular.tex  descriptive_stats_centrality_length_weighted.tex  descriptive_stats_centrality_length_weighted_angular.tex  descriptive_stats_land_use.tex  descriptive_stats_zone_centrality.tex  descriptive_stats_zone_centrality_angular.tex  descriptive_stats_zone_outcomes.tex  morans_i_segments.csv  morans_i_segments_network.tex  neff_segments.csv  neff_segments.tex  summary_stats_segments.json  summary_stats_segments.tex  summary_stats_survey.json  summary_stats_survey.tex
paper_prev/sections/: 5_data.tex  6_analysis.tex
paper_prev/supplementary/: S1_add_cents.tex  S2_add_figures.tex
scripts/: 01_lu_plots.py  02_travel_survey_plots.py  03_export_paper_numbers.py  04_check_paper_numbers_fresh.py  common.py  lu_plots.py  travel_survey_plots.py
