[project]
name = "paper-centrality"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk"},
]
dependencies = [
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.1",
    "geopandas>=0.14.3",
    "numpy>=1.26.4",
    "cityseer>=4.12.0",
    "scikit-learn>=1.4.1.post1",
    "scipy>=1.12.0",
    "jupyterlab>=4.1.5",
    "ipykernel>=6.29.3",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "AGPL-3.0"}

[tool.pdm]
distribution = false
