[project]
name = "paper-centrality"
version = "0.3.0"
description = "Default template for PDM package"
authors = [{ name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk" }]
dependencies = [
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.1",
    "geopandas>=0.14.3",
    "numpy>=1.26.4",
    "cityseer>=4.13.1",
    "scikit-learn>=1.4.1.post1",
    "scipy>=1.12.0",
    "jupyterlab>=4.1.5",
    "ipykernel>=6.29.3",
    "contextily>=1.6.2",
    "pyproj>=3.6.1",
    "matplotlib-scalebar>=0.8.1",
    "matplotlib-map-utils>=1.0.3",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
