[project]
name = "paper-centrality"
version = "0.5.0"
description = "Default template for PDM package"
authors = [{ name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk" }]
dependencies = [
    "cityseer>=4.18.1",
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "matplotlib-map-utils>=2.0.1",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.uv]
dev-dependencies = ["ruff>=0.6.5", "ty>=0.0.5"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
